--- a/siteifpr/styles/Home.module.css
+++ b/siteifpr/styles/Home.module.css
@@ -1,7 +1,7 @@
 .navbar {
   background-color: #2f9e3f;
   margin: 0;
-  height: 50px;
+  height: 60px;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
@@ -15,32 +15,102 @@
 
 .container {
   width: 100%;
-  background-color: red;
-  margin-top: 50px;
+  height: 110vh;
+  padding-top: 20px;
+  background-color: #252424;
+  margin-top: 60px;
+  text-align: center;
 }
 
 .footer {
   display: block;
   text-align: center;
-  padding: 30px 0;
-  margin-top: 60px;
+  padding: 30px;
   background-color: rgb(46, 46, 46);
-  color: #777;
+  color: white;
   border-top: 1px solid #eaeaea;
-  position: fixed;
   bottom: 0;
   width: 100%;
 }
 
 .a {
-  color: #333;
-  text-decoration: none;
-  padding-right: 7px;
-  padding-left: 7px;
-  font-size: 1.5rem;
+  color: rgb(44, 28, 28);
+  padding: 15px;
+  font-size: 0.9rem;
 }
 
 .logo {
   float: left;
   align-self: center;
+}
+
+.image {
+  flex: 1;
+  margin-left: 20px;
+  padding-top: 4px;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+  padding-top: 20px;
+  margin-right: 15px;
+}
+
+.bodyimage {
+  flex: 1;
+  margin-right: 300px;
+  margin-top: 41px;
+  float: right;
+  margin-right: 0;
+  width: 666px;
+  height: 400px;
+  background: red;
+  padding-top: 22px;
+}
+
+.bodytext {
+  flex: 1;
+  float: left;
+  height: 600px;
+  width: 686px;
+  margin-left: 0;
+  margin-top: 41px;
+  text-align: center;
+  color: white;
+}
+
+.titleback {
+  background-color: #161414;
+  height: 25px;
+  width: 700px;
+  margin-top: 20px;
+  margin-left: 25%;
+  border-radius: 50px;
+  padding-bottom: 5.8%;
+}
+
+.textrasp {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  font-size: 1.75rem;
+  margin-left: 30px;
+  background: #161414;
+  height: 50%;
+  width: 90%;
+}
+
+.teste {
+  flex: 1;
+  float: left;
+  margin-left: 0;
+}
+
+.title {
+  color: rgb(255, 255, 255);
+  margin-left: 15px;
 }
