--- a/siteifpr/styles/Home.module.css
+++ b/siteifpr/styles/Home.module.css
@@ -46,6 +46,8 @@
   align-self: center;
 }
 
+
+
 .image {
   flex: 1;
   margin-left: 20px;
@@ -63,7 +65,7 @@
 
 .right {
   padding-top: 20px;
-  padding-left: 30px;
+  padding-left: 10px;
 }
 
 .bodyimage {
@@ -90,16 +92,15 @@
 .titleback {
   display: flex;
   flex-direction: row;
-  padding: 5px;
-  width: 50%;
-  padding-left: 30px;
+  width: 45%;
+  height: 13%;
   background-color: #161414;
-  height: 10%;
   border-radius: 50px;
-  padding-bottom: 85px;
   margin: auto;
   min-width: 10%;
   min-height: 5%;
+  max-height: 13%;
+  max-width: 50%;
 }
 
 .body {
@@ -124,5 +125,6 @@
 
 .title {
   color: rgb(255, 255, 255);
-  font-size: 2vw;
+  font-size: 1.8vw;
+  padding-left: 40px;
 }
