--- a/siteifpr/styles/Home.module.css
+++ b/siteifpr/styles/Home.module.css
@@ -96,6 +96,7 @@
   height: 13%;
   background-color: #161414;
   border-radius: 50px;
+  padding-bottom: 90px;
   margin: auto;
   min-width: 10%;
   min-height: 5%;
