--- a/siteifpr/styles/Home.module.css
+++ b/siteifpr/styles/Home.module.css
@@ -19,26 +19,31 @@
   height: 100vh;
   padding-top: 20px;
   background-color: #252424;
+  margin: auto;
   margin-top: 60px;
 }
 
 .footer {
   display: flex;
+  position: relative;
+  flex-direction: row;
   text-align: center;
-  height: 20vh;
+  bottom: 0;
+  height: 25vh;
   background-color: rgb(46, 46, 46);
   color: white;
   border-top: 1px solid #eaeaea;
   width: 100%;
   justify-content: space-around;
+  min-height: 20vh;
 }
 .infosFooter {
   border-radius: 50px;
   background-color: #161414;
-  font-size: 60%;
+  font-size: 1.5vw;
 }
 .textInfos {
-  font-size: 75%;
+  font-size: 1vw;
   text-align: left;
   align-content: center;
   margin-left: 10px;
@@ -97,7 +102,6 @@
   width: 600px;
   margin-top: 20px;
   margin-right: 50px;
-  text-align: center;
   color: white;
   min-width: 250px;
 }
@@ -125,11 +129,12 @@
   min-width: 30%;
   max-width: 100%;
   margin-bottom: 20vh;
+  margin: auto;
 }
 
 .textrasp {
   padding: 20px;
-  font-size: 150%;
+  font-size: 2.3vw;
   margin-left: 40px;
   background: #161414;
 }
@@ -142,3 +147,39 @@
   font-size: 1.8vw;
   padding-left: 40px;
 }
+
+.content {
+  flex: 1
+}
+@media screen and (max-width: 639px) {
+  .textrasp {font-size: 15px; }
+  .body {
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+  .bodytext {
+    margin: 0;
+    padding: 0;
+    height: 200px;
+    margin: auto;
+  }
+  .bodyimage {
+    margin: 0;
+    padding: 0;
+    height: 200px;
+    width: 50%;
+    margin: auto;
+  }
+}
+
+.image {
+  width: 100%;
+  height: 325px;
+}
+@media (min-width: 640px) {
+    .textrasp {font-size: 15px; }
+  }
+
+@media (min-width:960px) { .textrasp {font-size: 20px;} } 
+@media (min-width:1100px) { .textrasp {font-size: 30px;} }
